fixed pullquote max width on mobile

--- a/_sass/_posts.sass
+++ b/_sass/_posts.sass
@@ -248,6 +248,8 @@
       margin: 1.5rem
     .headshot
       display: none
+  .pullquote
+    max-width: 100%			
 @media (max-width: 992px)
   .post-container
     padding-right: 0px
